# fantastic-disco

./: .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml  requirements.txt
brand/: atxgreene-brand-cheat-sheet.html  atxgreene-brand-palette.json  atxgreene-brand-tokens.css
dashboard/: app.py  llm_router.py
docs/: Claude Code Architecture Notes.md  Mnemosyne - Consciousness Extensions.md  TurboQuant Research Notes.md
mnemosyne/: __init__.py
mnemosyne/compression/: __init__.py  mixed_precision.py  turboquant.py
mnemosyne/consciousness/: __init__.py  autobiography.py  behavioral_coupling.py  curiosity.py  goals.py  loop.py  metacognition.py  temporal.py
mnemosyne/dream/: __init__.py  consolidator.py
mnemosyne/memory/: __init__.py  compressed_sdi.py  scoped.py
mnemosyne/tests/: test_aliveness.py  test_consciousness.py  test_turboquant.py
